--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
     <link rel="stylesheet" href="./Ressources/CSS/style.css">
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
+</script>
 </head>
 
 <body>
@@ -52,38 +57,35 @@
 ============================================================================================ -->
 
         <div class="row barreNav">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <nav class="navbar navbar-expand-lg navbar-light sticky-top barreNav">
-                    <a class="navbar-brand businessNav" href="#">Matrix</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav  ms-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link navColor" href="#home">Home <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link navColor" href="#AboutUs">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link navColor" href="#page">Pages</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link navColor" href="#news">News</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link navColor" href="#footer">Contact Us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-md-1"></div>
+            <nav class="navbar navbar-expand-lg navbar-light sticky-top barreNav">
+                <div class="container-fluid">
+                  <a class="navbar-brand businessNav" href="#">Matrix</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                      <li class="nav-item">
+                        <a class="nav-link active navColor" aria-current="page"  href="#home">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#AboutUs">About Us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#page">Pages</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#news">News</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#footer">Contact Us</a>
+                      </li>
 
+                    </ul>
+
+                  </div>
+                </div>
+              </nav>
         </div>
     </header>
 
@@ -432,12 +434,7 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
-    </script>
+    
 </body>
 
 </html>
